# gp-cpp

./: CMakeLists.txt  README.md  include.cmake
include/: gp.h  kernel.h  rbf.h
src/: gp.cpp  rbf.cpp
test/: CMakeLists.txt  test.cpp
